# dicey

./: Cargo.toml  README.md
src/: dice.rs  errors.rs  lib.rs  main.rs
src/dice/: die.rs  roll.rs
