[package]
name = "dicer"
version = "0.1.0"
edition = "2018"
authors = ["Marvin Wallenfang"]
description = "A calculator of dice rolls. Primarily made for tabletop dice rolls."
keywords = ["parser","parse","game","gamedev","random","dice"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"